[metadata]
name = pydl
author = Benjamin Alan Weaver
author_email = baweaver@lbl.gov
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://github.com/weaverba137/pydl
description = Astropy affiliated package
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = weaverba137/pydl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy

[options.entry_points]
console_scripts =
    get_juldate = pydl.goddard.astro:get_juldate_main
    hogg_iau_name = pydl.pydlutils.misc:hogg_iau_name_main
    compute_templates = pydl.pydlspec2d.spec1d:template_input_main

[options.extras_require]
all =
    matplotlib
test =
    pytest-astropy
astropy2 =
    pytest-mock<2
docs =
    sphinx-astropy

[options.package_data]
# * = *.c
pydl.tests = coveragerc, t/*
pydl.goddard.tests = t/*
pydl.photoop.tests = t/*
pydl.pydlspec2d.tests = t/*
pydl.pydlutils = data/cooling/*, data/filters/*
pydl.pydlutils.tests = t/*

[tool:pytest]
testpaths = "pydl" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-glob=*.rst

[coverage:run]
omit =
    pydl/_astropy_init*
    pydl/conftest.py
    pydl/*setup_package*
    pydl/tests/*
    pydl/*/tests/*
    pydl/extern/*
    pydl/version*
    */pydl/_astropy_init*
    */pydl/conftest.py
    */pydl/*setup_package*
    */pydl/tests/*
    */pydl/*/tests/*
    */pydl/extern/*
    */pydl/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
